# site_viewer

./: .env  .gitignore  LICENSE  README.md  docker-compose-dev.yml  docker-compose-prod.yml  mkcert.sh
cert/: server-dev.crt  server-dev.csr  server-dev.key
db/: init.sql
frontend/: Dockerfile.dev  build-dev.sh  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Scene.vue
models/: bench_1.gltf
site_viewer/: .dockerignore  Dockerfile.dev  pyproject.toml  start_dev.sh
site_viewer/src/: database.py  main.py  models.py
site_viewer/src/api/: site.py
site_viewer/static/: aframe-master.js  create.html  index.html  model-viewer.html  view.html  view_demo.html  webxr.html
site_viewer/static/css/: style.css
site_viewer/static/js/: createAncor.js  interactiveStars.js  urlhandler.js  util.js  viewDemoProject.js  viewProject.js  xr.js
site_viewer/static/models/: bench_1.fbx  bench_2.gltf  bench_3.gltf  flat_marker.glb  flat_marker.gltf  marker.gltf
site_viewer/tests/: test_site_viewer.py
